--- a/index.html
+++ b/index.html
@@ -21,9 +21,55 @@
   </style>
 </head>
 <body>
+  <!-- GitHub Corner Badge -->
+  <a href="https://github.com/goabiaryan/awesome-gpu-engineering"
+     class="github-corner"
+     aria-label="View source on GitHub">
+    <svg width="80" height="80" viewBox="0 0 250 250"
+         style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;"
+         aria-hidden="true">
+      <path d="M0,0 L115,0 L130,15 L142,15 L250,15 L250,250 L0,250 Z"></path>
+      <path d="M128.3,109.0
+        C113.8,99.7 119.0,89.6 119.0,89.6
+        C122.0,82.7 120.5,78.6 120.5,78.6
+        C119.2,72.0 123.4,76.3 123.4,76.3
+        C127.3,80.9 125.5,87.3 125.5,87.3
+        C122.9,97.6 130.6,101.9 134.4,103.2"
+        fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+      <path d="M115.0,115.0
+        C114.9,115.1 114.9,115.3 115.0,115.5
+        C115.1,115.7 115.2,115.8 115.4,115.8
+        C115.6,115.8 115.8,115.7 115.9,115.5
+        C116.0,115.3 116.0,115.1 115.9,115.0
+        C115.8,114.8 115.6,114.8 115.4,114.8
+        C115.2,114.8 115.1,114.9 115.0,115.0 M115.0,110.0
+        C114.9,110.1 114.9,110.3 115.0,110.5
+        C115.1,110.7 115.2,110.8 115.4,110.8
+        C115.6,110.8 115.8,110.7 115.9,110.5
+        C116.0,110.3 116.0,110.1 115.9,110.0
+        C115.8,109.8 115.6,109.8 115.4,109.8
+        C115.2,109.8 115.1,109.9 115.0,110.0 Z"
+        fill="currentColor" class="octo-body"></path>
+    </svg>
+  </a>
+
+  <style>
+    .github-corner:hover .octo-arm { animation: octocat-wave 560ms ease-in-out; }
+    @keyframes octocat-wave {
+      0%, 100% { transform: rotate(0); }
+      20%, 60% { transform: rotate(-25deg); }
+      40%, 80% { transform: rotate(10deg); }
+    }
+    @media (max-width: 500px) {
+      .github-corner:hover .octo-arm { animation: none; }
+      .github-corner .octo-arm { animation: octocat-wave 560ms ease-in-out; }
+    }
+  </style>
+
   <div id="content">Loading...</div>
 
   <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js"></script>
+   
   <script>
     // Fetch and render the README.md
     fetch('README.md')
