--- a/index.html
+++ b/index.html
@@ -22,36 +22,39 @@
 </head>
 <body>
   <!-- GitHub Corner Badge -->
-  <a href="https://github.com/goabiaryan/awesome-gpu-engineering"
-     class="github-corner"
-     aria-label="View source on GitHub">
-    <svg width="80" height="80" viewBox="0 0 250 250"
-         style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;"
-         aria-hidden="true">
-      <path d="M0,0 L115,0 L130,15 L142,15 L250,15 L250,250 L0,250 Z"></path>
-      <path d="M128.3,109.0
-        C113.8,99.7 119.0,89.6 119.0,89.6
-        C122.0,82.7 120.5,78.6 120.5,78.6
-        C119.2,72.0 123.4,76.3 123.4,76.3
-        C127.3,80.9 125.5,87.3 125.5,87.3
-        C122.9,97.6 130.6,101.9 134.4,103.2"
-        fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
-      <path d="M115.0,115.0
-        C114.9,115.1 114.9,115.3 115.0,115.5
-        C115.1,115.7 115.2,115.8 115.4,115.8
-        C115.6,115.8 115.8,115.7 115.9,115.5
-        C116.0,115.3 116.0,115.1 115.9,115.0
-        C115.8,114.8 115.6,114.8 115.4,114.8
-        C115.2,114.8 115.1,114.9 115.0,115.0 M115.0,110.0
-        C114.9,110.1 114.9,110.3 115.0,110.5
-        C115.1,110.7 115.2,110.8 115.4,110.8
-        C115.6,110.8 115.8,110.7 115.9,110.5
-        C116.0,110.3 116.0,110.1 115.9,110.0
-        C115.8,109.8 115.6,109.8 115.4,109.8
-        C115.2,109.8 115.1,109.9 115.0,110.0 Z"
-        fill="currentColor" class="octo-body"></path>
-    </svg>
-  </a>
+  <a href="https://github.com/goabiaryan/awesome-gpu-engineering" target="_blank"
+   style="
+     position: fixed;
+     top: 1rem;
+     right: 1rem;
+     background-color: #24292e;
+     color: white;
+     font-weight: 600;
+     font-size: 14px;
+     padding: 8px 14px;
+     border-radius: 6px;
+     text-decoration: none;
+     display: flex;
+     align-items: center;
+     gap: 6px;
+     box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+     z-index: 9999;
+   ">
+  <svg height="18" width="18" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+    <path d="M8 0C3.58 0 0 3.58 0 8a8 8 0 0 0 5.47 7.59c.4.07.55-.17.55-.38
+      0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94
+      -.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53
+      .63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66
+      .07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95
+      0-.87.31-1.59.82-2.15-.08-.2-.36-1.01.08-2.11 0 0
+      .67-.21 2.2.82a7.63 7.63 0 0 1 2-.27c.68 0 1.36.09
+      2 .27 1.53-1.03 2.2-.82 2.2-.82.44 1.1.16 1.91.08
+      2.11.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65
+      3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.19
+      0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
+  </svg>
+  Check on GitHub
+</a>
 
   <style>
     .github-corner:hover .octo-arm { animation: octocat-wave 560ms ease-in-out; }
