--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Awesome GPU Engineering</title>
   <link rel="icon" href="https://awesome.re/badge.svg">
+    <script>
+    (function() {
+      var id = "__GA_ID__";
+      if (!id || id === "__GA_ID__") return;
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', id, { anonymize_ip: true });
+      var s = document.createElement('script');
+      s.async = 1;
+      s.src = 'https://www.googletagmanager.com/gtag/js?id=' + id;
+      document.head.appendChild(s);
+    })();
+  </script>
   <style>
     body {
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
