--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <iframe src="https://modelcraft.substack.com/embed" 
                 width="100%" 
                 height="320" 
-                style="max-width:480px; border:1px solid #EEE; background:white;" 
+                style="max-width:480px; border:1px solid #FFF; background:white;" 
                 frameborder="0" scrolling="no"></iframe>
       `;
       document.getElementById('content').appendChild(emailSection);
