some format issues resolved

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       emailSection.style.background = 'white';
       emailSection.style.textAlign = 'center';
       emailSection.innerHTML = `
-        <h2>Get the GPU Interview Guide</h2>
-        <p>I'm compiling an exclusive GPU Engineering interview guide. To receive it straight in your inbox once it's done.</p>
+        <h2>Get the GPU Engineering Interview Guide</h2>
+        <p>I'm compiling an exclusive GPU Engineering System Design interview guide. To receive it straight in your inbox once it's done.</p>
         <iframe src="https://modelcraft.substack.com/embed" 
                 width="100%" 
                 height="320" 
